Some text added and corrected

--- a/index.html
+++ b/index.html
@@ -314,21 +314,13 @@
             <div class="col-md-6 col-xs-12"></div>
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col" style="color: gray">La primera experiencia</div>
+                <div class="sub-title main-col" style="color: gray">(38% Alc.)</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
-                <h2 class="h2 tt title">Joven Plata</h2>
-                <div class="empty-sm-15 empty-xs-10"></div>
-                <span class="h5 color-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor
-                  incididunt ut labore et dolore.</span>
+                <h2 class="h2 tt title">Mezcal Triple - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
                 <div class="col-md-10 col-md-offset-1 col-sm-12">
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                      ut
-                      aliquip ex ea commodo consequat.</p>
+                    <p>Suave, refinado, avainillado y  muy sutil al paladar de las damas. Por su baja graduación en alcohol y su delicadez, es apto para aquellas personas que degustaran el Mezcal por primera vez. Es ligero en aromas y sabores, la triple destilación elimina la rudeza  agresividad natural-típica de un buen Mezcal, originando un mezcal exquisito.</p>
                   </div>
                 </div>
                 <div class="empty-sm-40 empty-xs-20"></div>
@@ -351,21 +343,13 @@
           <div class="row item-animation scroll-type-1 md-fix">
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col">El tradicional</div>
+                <div class="sub-title main-col">(48% Alc.)</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
-                <h2 class="h2 tt title">De nuestra sangre</h2>
-                <div class="empty-sm-15 empty-xs-10"></div>
-                <span class="h5 color-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor
-                  incididunt ut labore et dolore.</span>
+                <h2 class="h2 tt title">Mezcal Bi - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
                 <div class="col-md-10 col-md-offset-1 col-sm-12">
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                      ut
-                      aliquip ex ea commodo consequat.</p>
+                    <p>Mezcal representativo de la región de Nombre de Dios, Durango Mex. El mejor para degustar solo, es un mezcal dulce para el conocedor y el mejor para abrir la imaginación al intentar descifrar el origen de sus ricos aromas cítrico ahumados. Para el conocedor es un Mezcal interesante por el juego y combinación de aromas distintivos de un proceso artesanal, así como de las materias primas y herramientas con las que se elabora.</p>
                   </div>
                 </div>
                 <div class="empty-sm-40 empty-xs-20"></div>
@@ -390,21 +374,13 @@
             <div class="col-md-6 col-xs-12"></div>
             <div class="col-md-6 col-xs-12">
               <div class="simple-text text-center color-type-2">
-                <div class="sub-title main-col" style="color: goldenrod">Para los conocedores</div>
+                <div class="sub-title main-col" style="color: goldenrod">(52% Alc.)</div>
                 <div class="empty-sm-15 empty-xs-10"></div>
-                <h2 class="h2 tt title">Experiencia premium</h2>
-                <div class="empty-sm-15 empty-xs-10"></div>
-                <span class="h5 color-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor
-                  incididunt ut labore et dolore.</span>
+                <h2 class="h2 tt title">Mezcal Triple - Destilado</h2>
                 <div class="empty-sm-35 empty-xs-20"></div>
                 <div class="col-md-10 col-md-offset-1 col-sm-12">
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                      ut
-                      aliquip ex ea commodo consequat.</p>
+                    <p>Dulce, suave y rudo a la imaginación por su contenido en alcohol. Mezcal fantasma porque en él, no se percibe la rudeza  y agresividad de uno tradicional. Mezcal para paladares sabios. Inimaginable para algunos, resulta ser un poco más suave gracias a su triple destilación. </p>
                   </div>
                 </div>
                 <div class="empty-sm-40 empty-xs-20"></div>
