--- a/vive-mezcal.html
+++ b/vive-mezcal.html
@@ -173,13 +173,13 @@
 
                 <div class="row">
                   <div class="col-sm-12">
-                    <img src="images/vive-1.png" alt="" class="full-img">
+                    <img src="images/vive-4.png" alt="" class="full-img">
                   </div>
                   <div class="empty-sm-30 empty-xs-30"></div>
                   <div class="col-sm-12">
                     <div class="wrapp-border">
                       <span class="page-span-5 page-span red-block left"></span>
-                      <img src="images/vive-2.png" alt="" class="full-img">
+                      <img src="images/vive-5.png" alt="" class="full-img">
                     </div>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="wrapp-border">
                   <span class="page-span-6 page-span right red-block red-block-opposite"></span>
-                  <img src="images/vive-3.png" alt="" class="full-img">
+                  <img src="images/vive-6.png" alt="" class="full-img">
                 </div>
               </div>
             </div>
@@ -230,14 +230,10 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 col-xs-12">
             <div class="simple-text text-center color-type-2">
-              <div class="sub-title main-col">Realiza tus combinaciones, conoce las alternativas</div>
+              <div class="sub-title main-col">Galería</div>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <h2 class="h2 tt title">Explora bebidas</h2>
+              <h2 class="h2 tt title">El lugar donde todo comienza</h2>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <div class="col-md-8 col-md-offset-2 col-sm-12">
-                <span class="h5 color-2">lorem impsum dolor sit amet
-                </span>
-              </div>
             </div>
             <div class="empty-lg-50 empty-md-40 empty-sm-30 empty-xs-30"></div>
 
