Images in gallery fixed

--- a/vive-mezcal.html
+++ b/vive-mezcal.html
@@ -361,7 +361,7 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="menu-item menu-item-2 color-type-1">
               <div class="image hover-zoom">
-                <img src="images/PARADERO (13).jpg" alt="">
+                <img src="images/PARADERO_(13).jpg" alt="">
                 <div class="vertical-align full menu-button">
                   <h5 class="h5 caption"><a href="#" class="link-hover-line" data-open="popup-gallery">Lorem ipsum
                       dolor</a></h5>
@@ -376,7 +376,7 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="menu-item menu-item-2 color-type-1">
               <div class="image hover-zoom">
-                <img src="images/PARADERO (14).jpg" alt="">
+                <img src="images/PARADERO_(14).jpg" alt="">
                 <div class="vertical-align full menu-button">
                   <h5 class="h5 caption"><a href="#" class="link-hover-line open-popup" data-open="popup-gallery">Lorem
                       ipsum dolor</a></h5>
@@ -391,7 +391,7 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="menu-item menu-item-2 color-type-1">
               <div class="image hover-zoom">
-                <img src="images/PARADERO (15).jpg" alt="">
+                <img src="images/PARADERO_(15).jpg" alt="">
                 <div class="vertical-align full menu-button">
                   <h5 class="h5 caption"><a href="#" class="link-hover-line open-popup" data-open="popup-gallery">Lorem
                       ipsum dolor</a></h5>
@@ -406,7 +406,7 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="menu-item menu-item-2 color-type-1">
               <div class="image hover-zoom">
-                <img src="images/PARADERO (16).jpg" alt="">
+                <img src="images/PARADERO_(16).jpg" alt="">
                 <div class="vertical-align full menu-button">
                   <h5 class="h5 caption"><a href="#" class="link-hover-line open-popup" data-open="popup-gallery">Lorem
                       ipsum dolor</a></h5>
