--- a/tienda.html
+++ b/tienda.html
@@ -207,27 +207,27 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="empty-sm-60 empty-xs-50"></div>
             <div class="menu-item menu-item-6 type-3">
-              <div class="image">s
+              <div class="image">
+                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
                 <img src="images/shop-plata.png" alt="Plata">
-                <div class="vertical-align full menu-button">
+              </div>
+            </div>
+            <div class="text">
+              <div class="empty-sm-20 empty-xs-20"></div>
+              <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
+              <div class="empty-sm-5 empty-xs-5"></div>
+              <div class="simple-text">
+                <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                  dolor
+                  sit amet ipsum dolor sit amet</p>
+                  <div class="empty-sm-20 empty-xs-20"></div>
+                <div class="text-center full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
                   <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
                       detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-
                 </div>
-              </div>
-              <div class="text">
-                <div class="empty-sm-20 empty-xs-20"></div>
-                <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
-                <div class="empty-sm-5 empty-xs-5"></div>
-                <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
-                    dolor
-                    sit amet ipsum dolor sit amet</p>
-                </div>
-                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
               </div>
             </div>
           </div>
@@ -235,26 +235,26 @@
             <div class="empty-sm-60 empty-xs-50"></div>
             <div class="menu-item menu-item-6 type-3">
               <div class="image">s
+                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
                 <img src="images/shop-sangre.png" alt="sangre">
-                <div class="vertical-align full menu-button">
+              </div>
+            </div>
+            <div class="text">
+              <div class="empty-sm-20 empty-xs-20"></div>
+              <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
+              <div class="empty-sm-5 empty-xs-5"></div>
+              <div class="simple-text">
+                <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                  dolor
+                  sit amet ipsum dolor sit amet</p>
+                  <div class="empty-sm-20 empty-xs-20"></div>
+                <div class="text-center full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
                   <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
                       detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-
                 </div>
-              </div>
-              <div class="text">
-                <div class="empty-sm-20 empty-xs-20"></div>
-                <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
-                <div class="empty-sm-5 empty-xs-5"></div>
-                <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
-                    dolor
-                    sit amet ipsum dolor sit amet</p>
-                </div>
-                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
               </div>
             </div>
           </div>
@@ -262,26 +262,26 @@
             <div class="empty-sm-60 empty-xs-50"></div>
             <div class="menu-item menu-item-6 type-3">
               <div class="image">s
+                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
                 <img src="images/shop-premium.png" alt="">
-                <div class="vertical-align full menu-button">
+              </div>
+            </div>
+            <div class="text">
+              <div class="empty-sm-20 empty-xs-20"></div>
+              <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
+              <div class="empty-sm-5 empty-xs-5"></div>
+              <div class="simple-text">
+                <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                  dolor
+                  sit amet ipsum dolor sit amet</p>
+                  <div class="empty-sm-20 empty-xs-20"></div>
+                <div class="text-center full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
                   <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
                       detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-
                 </div>
-              </div>
-              <div class="text">
-                <div class="empty-sm-20 empty-xs-20"></div>
-                <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
-                <div class="empty-sm-5 empty-xs-5"></div>
-                <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
-                    dolor
-                    sit amet ipsum dolor sit amet</p>
-                </div>
-                <div class="menu-price style-2 title main-col">$450.00 mxn</div>
               </div>
             </div>
           </div>
