--- a/mixologia.html
+++ b/mixologia.html
@@ -166,7 +166,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -196,9 +196,9 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
-                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                   </div>
                 </div>
               </div>
@@ -226,7 +226,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -256,7 +256,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -286,7 +286,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -316,7 +316,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -346,7 +346,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -376,7 +376,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -406,7 +406,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -436,7 +436,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -466,7 +466,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
@@ -496,7 +496,7 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <p class="mixology-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
